--- a/Wspolnota_RestApi/APIWspolnota/APIWspolnota.csproj
+++ b/Wspolnota_RestApi/APIWspolnota/APIWspolnota.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath></OutputPath>
+    <DocumentationFile>C:\Users\OWielanowski\source\repos\WSZiBNET\OskarWspoldzielnia\Wspolnota_RestApi\APIWspolnota\APIWspolnota.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.4" />
